--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+          
+      - name: Open Web Client Directory
+        run: |
+          ls -la
+          cd ./src/webclient
+          ls -la
 
       - name: Install dependencies
         run: |
