--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,9 +25,8 @@ jobs:
           
       - name: Open Web Client Directory
         run: |
-          ls -la /usr/bin/git/*
           ls -al  /home/runner/work/Lodge_Complaint_Service_Management_System/Lodge_Complaint_Service_Management_System/*
-
+          ls -la /usr/bin/git
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
